TDM-132 fix sonar bugs